Makup Artist  Portfolio/style.css
body {
  background: linear-gradient(
    to bottom,
    #fff5f7,
    #ffeef2
  );
}

/* Navbar */
.navbar {
  background: linear-gradient(
    90deg,
    #ffe5ec,
    #fff1f2
  ) !important;

  backdrop-filter: blur(10px);
}

/* Logo */
.logo {
  font-size: 1.8rem;
  font-weight: 700;
  color: #c06c84 !important;

  font-family: "Playfair Display", serif;
  font-style: italic;
}

/* Nav links */
.nav-link {
  color: #8d5b66 !important;
  margin-left: 14px;
  font-weight: 500;
  transition: 0.3s;
  font-family: "Playfair Display", serif;
}

.nav-link:hover {
  color: #d63384 !important;
}

/* Hero Section */
.hero-section {
  min-height: 90vh;
  display: flex;
  align-items: center;
  padding: 60px 0;
}

/* Main Heading */
.hero-content h1 {
  font-family: "Playfair Display", serif;
  font-size: 3.8rem;
  font-weight: 700;
  color: #6d435a;
}

/* Sub heading */
.hero-content h3 {
  font-family: "Playfair Display", serif;
  font-size: 2rem;
  color: #d16d8f;
  margin-bottom: 20px;
}

/* Paragraph */
.hero-content p {
  color: #7a6871;
  font-size: 1.1rem;
  line-height: 1.9;
}

/* Experience box */
.experience-box {
  background: rgba(255,255,255,0.7);
  border: 1px solid #ffd6e0;
  padding: 18px;
  border-radius: 20px;
  margin-top: 20px;
  backdrop-filter: blur(10px);
}

/* Buttons */
.custom-btn {
  background: linear-gradient(
    90deg,
    #ff85a2,
    #ffb3c6
  ) !important;

  color: white !important;
  border: none;
  padding: 12px 30px;
  border-radius: 50px;
  font-weight: 600;
}

.custom-btn:hover {
  transform: translateY(-3px);
  transition: 0.3s;
}

/* Hero Image */
.hero-image {
  width: 100%;
  max-width: 500px;
  border-radius: 30px;

  box-shadow:
    0 10px 30px rgba(255, 182, 193, 0.4);

  border: 4px solid #ffd6e0;
}

/* Mobile */
@media (max-width: 768px) {

  .hero-section {
    text-align: center;
    padding-top: 50px;
  }

  .hero-content h1 {
    font-size: 2.3rem;
  }

  .hero-content h3 {
    font-size: 1.5rem;
  }

  .hero-image {
    margin-bottom: 30px;
  }
}

